# Data_Prot_Assignment_1

./: .gitignore  README.md  classify.py  dataloader.py  generate_splits.py  k+1_gan.py  main.py  pyproject.toml  recovery.py  results_wd_0.0001.txt  run_weight_decay_exp.py  utils.py
config/: celeba.json  classify.json
data/: ganset.txt  testset.txt  trainset.txt
data/img_align_celeba/: generate_splits.py
improvedGAN/attack_logs/: events.out.tfevents.1772295343.BoberTP  events.out.tfevents.1772295421.BoberTP  events.out.tfevents.1772299488.BoberTP  events.out.tfevents.1772299515.BoberTP  events.out.tfevents.1772299542.BoberTP  events.out.tfevents.1772390036.AsusBober  events.out.tfevents.1772390076.AsusBober  events.out.tfevents.1772390114.AsusBober  events.out.tfevents.1772390711.AsusBober  events.out.tfevents.1772390747.AsusBober  events.out.tfevents.1772390784.AsusBober  events.out.tfevents.1772391303.AsusBober  events.out.tfevents.1772391343.AsusBober  events.out.tfevents.1772391380.AsusBober  events.out.tfevents.1772392505.AsusBober  events.out.tfevents.1772392545.AsusBober  events.out.tfevents.1772392581.AsusBober  events.out.tfevents.1772393956.AsusBober  events.out.tfevents.1772394788.AsusBober  events.out.tfevents.1772395592.AsusBober  events.out.tfevents.1772400738.AsusBober  improvedGAN_celeba.txt
target_model/target_logs/: VGG16.txt
