[project]
name = "data-prot-assignment-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.20"
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "torchvision",
    "opencv-python",
    "Pillow",
    "scikit-learn",
    "tensorboardX",
    "matplotlib",
    "scipy"
]
